--- a/topics/c_glossaries.dita
+++ b/topics/c_glossaries.dita
@@ -28,9 +28,9 @@
                 you may want translators to use the less colloquial "stymulator" instead.</p>
         </section>
         <section id="section_yld_d3l_kpb">
-            <title>Definition and context</title>
-            <p>Glossaries can also provide a definition for each term, as well as context, such as
-                subject domain or sample use.</p>
+            <title>Definitions and context</title>
+            <p>Glossaries can also provide a definition for each term, as well as context (such as
+                subject domain or sample use).</p>
         </section>
         <section id="section_nry_sjl_kpb">
             <title>Format</title>
