--- a/topics/t_resolving_conrefs_and_keyrefs.dita
+++ b/topics/t_resolving_conrefs_and_keyrefs.dita
@@ -9,14 +9,14 @@
             <p>When preparing your project for localization, you can consider replacing content
                 references (conrefs) and keyword references (keyrefs) with appropriate content.</p>
             <p>Replacing conrefs and keyrefs with plain text may be useful, for example, when you
-                have a legacy content containing a lot of references and need to localize it without
+                have legacy content containing a lot of references and need to localize it without
                 extensive rewriting.</p>
             <note id="note_ahw_pwb_npb" type="important">Once you resolve conrefs and keyrefs, they
-                no longer exist in the localized text. You need to decide what brings more benefits.
+                no longer exist in the localized text. You should decide what brings more benefits.
                 If your project uses conrefs and keyrefs solely for non-translatable terms (such as
                 trademarks), it may be useful to keep them. On the other hand, if such references
-                are used for single words or phrases, you may want to replace them with plain text
-                to improve translation quality.</note>
+                point to single words or phrases, you may want to replace them with plain text to
+                improve translation quality.</note>
             <p>To resolve all conrefs and keyrefs in a topic in <term keyref="g_oxygen_xml_editor"
                 />, follow these steps:</p>
         </context>
