--- a/topics/c_project_structure.dita
+++ b/topics/c_project_structure.dita
@@ -9,8 +9,8 @@
             <p>A logical folder structure will make localization much easier. Don't keep all files
                 in one folder. Instead, create separate folders for your topics, images, and other
                     content.<note id="note_djz_ypn_kpb" type="tip">To avoid publishing problems,
-                    always store your DITA maps at the same level or above your topics and
-                    images.</note></p>
+                    always store your DITA maps at the same level as your topics and images or above
+                    them.</note></p>
         </section>
         <section id="section_tby_z4n_kpb">
             <title>Prefixes vs. folders</title>
