--- a/topics/t_resolving_conrefs_and_keyrefs.dita
+++ b/topics/t_resolving_conrefs_and_keyrefs.dita
@@ -42,7 +42,7 @@
                     <fig id="fig_jls_vx2_kpb">
                         <image href="../images/oxygen-replace-references.png" id="image_k4b_wx2_kpb"
                             width="750">
-                            <alt>'DITA' menu in oXygen with the 'Replace All References' with
+                            <alt>'DITA' menu in oXygen with the 'Replace All References with
                                 Content' option</alt>
                         </image>
                     </fig>
