Change the title

--- a/dita_localization.ditamap
+++ b/dita_localization.ditamap
@@ -2,7 +2,7 @@
 <!DOCTYPE bookmap PUBLIC "-//OASIS//DTD DITA BookMap//EN" "bookmap.dtd">
 <bookmap>
     <booktitle>
-        <mainbooktitle>How to prepare DITA content for localization</mainbooktitle>
+        <mainbooktitle>Prepare DITA content for localization</mainbooktitle>
     </booktitle>
     <bookmeta>
         <authorinformation id="drobnik">
