--- a/dita_localization_website.ditamap
+++ b/dita_localization_website.ditamap
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map xml:lang="en-US" dir="ltr">
-    <title>How to prepare DITA content for localization</title>
+    <title>Prepare DITA content for localization</title>
     <topicmeta>
         <author>Łukasz Drobnik</author>
         <copyright>
